<resources>
    <string name="app_name">Sales CRM</string>
    <string name="error_network_timeout">Request timedout, please try again later.</string>
    <string name="error_network">Something went wrong, please try again later.</string>
    <string name="error_check_internet">Server not reachable, please check your internet connection.</string>
    <string name="price"> <strike>\u20B9 6500</strike> </string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="enter_login_details">Enter Login Details</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address">Enter Email Address</string>
</resources>