<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/sacramento"
                android:text="welcome"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#000"
                android:text="@string/sign_in_to_your_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textSize="18sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:textColor="#000"
                android:text="@string/enter_login_details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_edittext"
                    android:hint="@string/enter_email_address"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/nunito_sans"
                    android:lineSpacingExtra="5.3sp"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_edittext"
                    android:hint="@string/password"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/nunito_sans"
                    android:lineSpacingExtra="5.3sp"
                    />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_filled_back"
                android:layout_margin="20dp"
                android:elevation="3dp"
                android:padding="18dp"
                android:id="@+id/login">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:fontFamily="@font/nunito_sans"
                    android:textSize="20sp"
                    android:drawablePadding="7dp"/>

            </RelativeLayout>




        </LinearLayout>


    </ScrollView>

</RelativeLayout>